--- a/docker/docker/containers.conf
+++ b/docker/docker/containers.conf
@@ -2,3 +2,6 @@
 driver = "vfs"
 graphroot = "/home/build/.local/share/containers/storage"
 runroot = "/home/build/.local/share/containers/run"
+
+[storage.options.overlay]
+mount_program = "/usr/bin/fuse-overlayfs"
