--- a/docker/docker/Dockerfile.linux.amd64
+++ b/docker/docker/Dockerfile.linux.amd64
@@ -1,27 +1,25 @@
 FROM quay.io/buildah/stable:v1.26.0
 
 # Set up the working directory
-USER build
 WORKDIR /home/build
 
 # Create necessary CNI directories with correct permissions
 RUN mkdir -p /home/build/.config/cni/net.d/ && chmod -R 755 /home/build/.config/cni
 
-# Copy the custom containers.conf
+# Copy the custom containers.conf and set permissions before switching to build user
 COPY docker/docker/containers.conf /home/build/.config/containers/containers.conf
+RUN mkdir -p /home/build/.local/share/containers/storage && \
+    mkdir -p /home/build/.local/share/containers/run && \
+    chmod -R 755 /home/build/.local/share/containers && \
+    chown -R 1000:1000 /home/build/.config /home/build/.local
+
+# Now switch to the non-root user
+USER build
 
 # Set XDG_CONFIG_HOME to point to the correct config directory
 ENV XDG_CONFIG_HOME=/home/build/.config
 ENV CONTAINERS_CONF=/home/build/.config/containers/containers.conf
 ENV CONTAINERS_CONF_OVERRIDE=/home/build/.config/containers/containers.conf
-
-# Ensure proper permissions on storage directories
-RUN mkdir -p /home/build/.local/share/containers/storage && \
-    mkdir -p /home/build/.local/share/containers/run && \
-    chmod -R 755 /home/build/.local/share/containers
-
-# Ensure the container has the necessary permissions for Buildah
-RUN chown -R build:build /home/build/.config /home/build/.local
 
 # Add the plugin binary
 ADD release/linux/amd64/drone-docker /bin/
