--- a/docker/docker/Dockerfile.linux.amd64
+++ b/docker/docker/Dockerfile.linux.amd64
@@ -2,8 +2,7 @@ FROM quay.io/buildah/stable:v1.26.0
 
 USER root
 COPY docker/docker/storage.conf /etc/containers/storage.conf
-RUN cat /etc/containers/storage.conf \
-    > /home/build/.config/containers/storage.conf && \
+RUN cp /etc/containers/storage.conf /home/build/.config/containers/ && \
     chown build:build /home/build/.config/containers/storage.conf
 
 # Add the plugin binary
