--- a/docker/docker/containers.conf
+++ b/docker/docker/containers.conf
@@ -1,7 +1,2 @@
-[storage]
-driver = "vfs"
-graphroot = "/home/build/.local/share/containers/storage"
-runroot = "/home/build/.local/share/containers/run"
-
-[storage.options.overlay]
-mount_program = "/usr/bin/fuse-overlayfs"
+[engine]
+cgroup_manager = "cgroupfs"
