--- a/docker/docker/storage.conf
+++ b/docker/docker/storage.conf
@@ -1,4 +1,4 @@
 [storage]
-driver = "vfs"
-graphroot = "/home/build/.local/share/containers/storage"
-runroot = "/home/build/.local/share/containers/run"
+driver = "overlay"
+[storage.options]
+mount_program = "/usr/bin/fuse-overlayfs"
