--- a/docker/docker/storage.conf
+++ b/docker/docker/storage.conf
@@ -1,4 +1,7 @@
 [storage]
-driver = "overlay"
+driver = "vfs"  # or "overlay"
+runroot = "/home/build/.local/share/containers/storage"
+graphroot = "/home/build/.local/share/containers/storage"
+
 [storage.options]
-mount_program = "/usr/bin/fuse-overlayfs"
+mount_program = "/usr/bin/fuse-overlayfs"  
