--- a/docker/docker/Dockerfile.linux.amd64
+++ b/docker/docker/Dockerfile.linux.amd64
@@ -10,7 +10,8 @@ RUN mkdir -p /home/build/.config/containers \
     && chown -R build:build /home/build/.local \
     && mkdir -p /home/build/.config/cni \
     && chown -R build:build /home/build/.config \
-    && chown :build /etc/containers/containers.conf
+    && chown :build /etc/containers/containers.conf \
+    && chown :build /usr/bin/fuse-overlayfs \
 
 # Update the storage.conf and containers.conf for the build user
 RUN cp /etc/containers/storage.conf /home/build/.config/containers/storage.conf \
